src/objects/Extension__c.object
<CustomObject>
    <description>Extend a placement</description>
    <fields>
        <fullName>App_Through_Date__c</fullName>
        <formula>Placement__r.Approved_Through_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>App Through Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Daily_Rent_Amount__c</fullName>
        <label>Current Daily Rent Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Days_to_Extend__c</fullName>
        <formula>Extend_To_Date__c -  App_Through_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Extend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extend_To_Date__c</fullName>
        <inlineHelpText>Enter the new approved through date if an approval is not required.</inlineHelpText>
        <label>Extend To Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extension_Created_By__c</fullName>
        <label>Extension Created By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extension_Status__c</fullName>
        <inlineHelpText>To Submit for Approval, the Extension Status must be set to Submit for Approval</inlineHelpText>
        <label>Extension Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Submit for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Furniture_Reschedule_Fee__c</fullName>
        <label>Furniture Reschedule Fee</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hotel_Room_ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Only required for hotel Rooms</inlineHelpText>
        <label>Hotel Room Lookup</label>
        <referenceTo>Hotel_Room__c</referenceTo>
        <relationshipLabel>Extensions</relationshipLabel>
        <relationshipName>Extensions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Landlord_Fee_Description__c</fullName>
        <label>Landlord Fee Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Landlord_Fee__c</fullName>
        <label>Landlord Fee</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Approved_Through_Date__c</fullName>
        <description>Approved through data from Mulligan</description>
        <label>New Approved Through Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Daily_Rent_Amount__c</fullName>
        <label>New Daily Rent Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Days_Extended__c</fullName>
        <label>Number of Days Extended</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Fee_Description__c</fullName>
        <description>Other major extension fee description</description>
        <label>Other Fee Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Fee__c</fullName>
        <description>Other major extension fee</description>
        <label>Other Fee</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pay_Landlord__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Pay Landlord</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Placement__c</fullName>
        <label>Placement</label>
        <referenceTo>Placement__c</referenceTo>
        <relationshipLabel>Extensions</relationshipLabel>
        <relationshipName>Extensions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Proposed_Extend_To_Date__c</fullName>
        <inlineHelpText>Enter the new approved through date if an approval is required.</inlineHelpText>
        <label>Proposed Extend To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Send_Extension_Check__c</fullName>
        <description>The options a user has when sending a check for a major extension.</description>
        <label>Send Extension Check</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FedEx Morning</fullName>
                </value>
                <value>
                    <fullName>FedEx Standard</fullName>
                </value>
                <value>
                    <fullName>FedEx Saturday</fullName>
                </value>
                <value>
                    <fullName>FedEx 2-Day</fullName>
                </value>
                <value>
                    <fullName>US Mail</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submit_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X18_Char_ID_ExtensionRecordType__c</fullName>
        <description>Created to convert the 15 character id to 18 characters.</description>
        <label>X18_Char_ID_ExtensionRecordType</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X18_Char_ID_HotelRoom__c</fullName>
        <description>Created to convert the 15 character id to 18 characters.</description>
        <label>X18_Char_ID_HotelRoom</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Extension</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>App_Through_Date__c</columns>
        <columns>Placement__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Ext-{00000}</displayFormat>
        <label>Extension Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Extensions</pluralLabel>
    <recordTypes>
        <fullName>Major_Extension</fullName>
        <active>true</active>
        <description>Extension after the Notice to Vacate has been sent</description>
        <label>Major Extension</label>
    </recordTypes>
    <recordTypes>
        <fullName>Minor_Extension</fullName>
        <active>true</active>
        <description>Extensions prior to the Notice to Vacate being sent</description>
        <label>Minor Extension</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Extension_Date_Validation</fullName>
        <active>true</active>
        <description>Ensures the Date entered by the user is greater than the Approved Through Date</description>
        <errorConditionFormula>Extend_To_Date__c  &lt;    Placement__r.Approved_Through_Date__c</errorConditionFormula>
        <errorDisplayField>Current_Daily_Rent_Amount__c</errorDisplayField>
        <errorMessage>The Extension Date cannot be less than the Approved Through Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Extension_Date_Validation_MoveIn</fullName>
        <active>true</active>
        <description>Ensures the Date entered by the user is greater than the Move In Date</description>
        <errorConditionFormula>Extend_To_Date__c &lt;  Placement__r.Move_In_Date__c</errorConditionFormula>
        <errorMessage>The Extension Date cannot be less than the Move-In Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Major_Extension_Approval_Needed</fullName>
        <active>false</active>
        <description>Major Adjustments 15 or less require an approval.</description>
        <errorConditionFormula>AND($RecordType.Name = &quot;Major Extension&quot;, 
Extend_To_Date__c -15 &lt;= Placement__r.Approved_Through_Date__c 
)</errorConditionFormula>
        <errorMessage>All Major Extensions 15 days or less require an approval. 
Please remove the Extend to Date, enter the date in the Proposed Extend To Date field, and submit the Extension for approval.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Major_Extension_Greater_Than_15Days</fullName>
        <active>false</active>
        <description>Major Extensions cannot be less than 15 days
&lt;&lt;INACTIVATED ON 1/5/2010- DDD 30109&gt;&gt;</description>
        <errorConditionFormula>AND
(
$RecordType.Name = &quot;Major Extension&quot;,  
OR
(
Proposed_Extend_To_Date__c  &lt; Placement__r.Approved_Through_Date__c + 15, Extend_To_Date__c  &lt; Placement__r.Approved_Through_Date__c + 15
)
)</errorConditionFormula>
        <errorMessage>A Major Extension must be 15 days or more</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Major_Extension_Validation</fullName>
        <active>true</active>
        <description>Checks to ensure that a major or minor extensions are valid based off of the approve through date and business rules</description>
        <errorConditionFormula>AND($RecordType.Name = &quot;Major Extension&quot;, Placement__r.Properties_Lookup__r.Days_Notice_Required__c + 2 &lt; Placement__r.Approved_Through_Date__c -  TODAY())</errorConditionFormula>
        <errorMessage>You must choose a Minor Extension since the Number of Days Required to send the notice has not passed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Minor_Extension_Validation</fullName>
        <active>true</active>
        <description>Checks to ensure that a major or minor extensions are valid based off of the approve through date and business rules</description>
        <errorConditionFormula>AND($RecordType.Name = &quot;Minor Extension&quot;,  Placement__r.Days_to_Vacate_Notice__c &lt; TODAY())</errorConditionFormula>
        <errorDisplayField>Current_Daily_Rent_Amount__c</errorDisplayField>
        <errorMessage>You must choose a Major Extension since the Number of Days Required to send the notice has passed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Proposed_Extension_Date_Validation</fullName>
        <active>false</active>
        <description>Ensures the Date entered by the user is greater than the Approved Through Date</description>
        <errorConditionFormula>Proposed_Extend_To_Date__c  &lt;   Placement__r.Approved_Through_Date__c</errorConditionFormula>
        <errorMessage>The Extension Date cannot be less than the Approved Through Date</errorMessage>
    </validationRules>
</CustomObject>